objects/ffc__Event__c.object
<CustomObject>
    <description>Holds Financial Force Events, News and Blogs...</description>
    <fields>
        <fullName>ffc__DateCreated__c</fullName>
        <label>DateCreated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__Link__c</fullName>
        <label>Link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffc__StartDate__c</fullName>
        <label>Start Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__StartTime__c</fullName>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__ThumbnailLargeURI__c</fullName>
        <label>Thumbnail Large URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__ThumbnailSmallURI__c</fullName>
        <label>Thumbnail Small URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLOG</fullName>
                </value>
                <value>
                    <fullName>NEWS</fullName>
                </value>
                <value>
                    <fullName>EVENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>ffc__All</fullName>
        <columns>ffc__Type__c</columns>
        <columns>NAME</columns>
        <columns>ffc__Title__c</columns>
        <columns>ffc__StartDate__c</columns>
        <columns>ffc__StartTime__c</columns>
        <columns>ffc__ThumbnailLargeURI__c</columns>
        <columns>ffc__ThumbnailSmallURI__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>